# ai_platform

./: .dockerignore  .gitignore  Dockerfile  PhaseStatusNameDescription.docx  README.md  environment.yml  pyproject.toml  ~$aseStatusNameDescription.docx
configs/environments/: banking.yaml  retail.yaml
configs/policies/: banking_policy.yaml  retail_policy.yaml
configs/radar/: tech_radar.yaml
docs/: PHASE3_TEST_COVERAGE.md  phase7_observability.md
k8s/: README.md
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml  patch-configmap.yaml  patch-deployment.yaml
k8s/overlays/staging/: patch-deployment.yaml
scripts/: observability_demo.py  run_local.sh  seed_rag.py  test_agent_e2e.py
services/api/: dependencies.py  main.py
services/api/routes/: agent.py  health.py  radar.py
tests/e2e/: conftest.py  test_agent_e2e.py  test_health_and_readiness.py  test_radar_endpoint.py
tests/integration/: test_agent_endpoint.py
