[project]
name = "ai-platform"
version = "0.1.0"
description = "Agentic AI Platform - Multi-domain AI orchestration with governed tool execution"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
